<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.swipe.SwipeFragment"
    android:id="@+id/cards_list_view_container">

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/cards_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    </com.lorentzos.flingswipe.SwipeFlingAdapterView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_empty"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/swipe_empty_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All the events have been viewed!"
            android:textAlignment="center"
            app:layout_anchorGravity="center"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/reload_swipe_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="80dp"
            android:text="@string/reload"
            android:textColor="@color/white"
            app:layout_anchorGravity="center"/>
    </LinearLayout>

    <ch.epfl.sdp.ui.main.swipe.EventDetailView
        android:id="@+id/event_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</FrameLayout>