...
    android:layout_height="match_parent"
    android:padding="10sp"
    android:outlineProvider="bounds"
    android:clipToPadding="false">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/default_event_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/oss117" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="Title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
...
