...
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_place_black_24dp" />

                    <TextView
                        android:id="@+id/eventDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:paddingEnd="30dp"
...
