<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/grey"
        app:tabTextColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swipe" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event" />

        <com.google.android.material.tabs.TabItem

            android:id="@+id/map_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Map" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
